# griot

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  go.mod  go.sum  go_dependencies.bzl
.github/workflows/: ci.yaml  codeql.yaml  docs.yaml  main.yml  release.yaml
cmd/griot/: BUILD.bazel  config.yaml  main.go
cmd/griot/app/: BUILD.bazel  app.go
cmd/griot/content/: BUILD.bazel  content.go
cmd/griot/content/upload/: BUILD.bazel  upload.go  upload_test.go
cmd/griot/upload/: upload.go
cmd/internal/command/: BUILD.bazel  command.go
docs/: go.mod  hugo.yaml
docs/content/: _index.md
docs/content/design/: _index.md
docs/content/design/content_service/: _index.md  content_index.md  content_storage.md  upload_content_v1.md
docs/content/user_guide/: _index.md  curating_content.md
docs/diagrams/: architecture.drawio
internal/command/: BUILD.bazel  command.go  error.go
internal/mimetype/: mimetype.go
internal/noop/: slog.go
internal/ptr/: BUILD.bazel  ptr.go
services/content/: BUILD.bazel  app.go  client.go  client_example_test.go  client_test.go  content.go  content.proto  hash_func.proto  index_record.proto  media_type.proto  upload_content_v1_response.proto
services/content/app/: BUILD.bazel  app.go
services/content/cmd/content/: BUILD.bazel  config.yaml  main.go
services/content/contentpb/: BUILD.bazel  checksum.pb.go  checksum.proto  content_id.pb.go  content_id.proto  hash_func.pb.go  media_type.pb.go  media_type.proto  metadata.pb.go  metadata.proto  upload_content_v1_response.pb.go  upload_content_v1_response.proto
services/content/endpoint/: BUILD.bazel  upload_content_v1.go
services/content/endpoint/v1/: upload_content.go
services/content/indexpb/: BUILD.bazel  content_size.pb.go  content_size.proto  index_record.pb.go  index_record.proto  media_type.pb.go  unit_of_information.pb.go  unit_of_information.proto
services/showmgmt/: BUILD.bazel  main.go
services/showmgmt/cmd/: BUILD.bazel  cmd.go  serve.go  serve_http.go  showmgmt.go
services/showmgmt/http/: BUILD.bazel  add_episode.go  add_episode_test.go  service.go  service_test.go
tools/griot/: BUILD.bazel  main.go
tools/griot/cmd/: BUILD.bazel  cmd.go  griot.go
