load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "griot_lib",
    srcs = ["main.go"],
    embedsrcs = ["config.yaml"],
    importpath = "github.com/z5labs/griot/cmd/griot",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/griot/app",
        "//internal/command",
    ],
)

go_binary(
    name = "griot",
    embed = [":griot_lib"],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "tar",
    srcs = [":griot"],
)

oci_image(
    name = "image",
    base = "@distroless_static",
    entrypoint = ["/griot"],
    tars = [":tar"],
)
