load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "content",
    srcs = ["content.go"],
    importpath = "github.com/z5labs/griot/services/content",
    visibility = ["//visibility:public"],
    deps = [
        "//services/content/contentpb",
        "@com_github_z5labs_humus//rest",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_metric//:metric",
        "@org_golang_google_protobuf//proto",
        "@org_golang_x_sync//errgroup",
    ],
)
