load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "griot_lib",
    srcs = ["main.go"],
    importpath = "github.com/z5labs/griot/tools/griot",
    visibility = ["//visibility:private"],
    deps = ["//tools/griot/cmd"],
)

go_binary(
    name = "griot",
    embed = [":griot_lib"],
    visibility = ["//visibility:public"],
)
