load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "content",
    srcs = ["content.go"],
    importpath = "github.com/z5labs/griot/cmd/griot/content",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/griot/content/upload",
        "//cmd/internal/command",
    ],
)
