load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "command",
    srcs = [
        "command.go",
        "error.go",
    ],
    importpath = "github.com/z5labs/griot/cmd/internal/command",
    visibility = ["//cmd:__subpackages__"],
    deps = [
        "@com_github_go_viper_mapstructure_v2//:mapstructure",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_pflag//:pflag",
        "@com_github_z5labs_humus//:humus",
        "@io_opentelemetry_go_otel//:otel",
    ],
)
