load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "cmd.go",
        "serve.go",
        "serve_http.go",
        "showmgmt.go",
    ],
    importpath = "github.com/z5labs/griot/services/showmgmt/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//services/showmgmt/http",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
