load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "http",
    srcs = ["service.go"],
    importpath = "github.com/z5labs/griot/services/showmgmt/http",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gofiber_fiber_v2//:fiber",
        "@com_github_gofiber_fiber_v2//middleware/pprof",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "http_test",
    srcs = ["service_test.go"],
    embed = [":http"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@org_golang_x_sync//errgroup",
        "@org_uber_go_zap//:zap",
    ],
)
