load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "http",
    srcs = [
        "add_episode.go",
        "service.go",
    ],
    importpath = "github.com/z5labs/griot/services/showmgmt/http",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_playground_validator_v10//:validator",
        "@com_github_gofiber_fiber_v2//:fiber",
        "@com_github_gofiber_fiber_v2//middleware/cors",
        "@com_github_gofiber_fiber_v2//middleware/pprof",
        "@com_github_spf13_afero//:afero",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "http_test",
    srcs = [
        "add_episode_test.go",
        "service_test.go",
    ],
    embed = [":http"],
    deps = [
        "@com_github_gofiber_fiber_v2//:fiber",
        "@com_github_stretchr_testify//assert",
        "@org_golang_x_sync//errgroup",
        "@org_uber_go_zap//:zap",
    ],
)
