load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cmd",
    srcs = [
        "cmd.go",
        "griot.go",
    ],
    importpath = "github.com/z5labs/griot/tools/griot/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)

go_test(
    name = "cmd_test",
    srcs = ["cmd_test.go"],
    data = glob(["testdata/**"]),
    embed = [":cmd"],
    deps = [
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
        "@com_github_stretchr_testify//assert",
    ],
)
